--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,9 +2,8 @@ name: Tests
 on: push
 
 jobs:
-  # <---------------- TEST BASIC CONFIG ------------------>
   basic:
-    name: Basic
+    name: SA Key
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -38,3 +37,41 @@ jobs:
           result: ${{ steps.deploy.outcome }}
           version: ${{ github.ref }}
 
+  oidc:
+    name: OIDC
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Start
+        uses: ./
+        with:
+          gcp-auth-type: oidc
+          google-cloud-project: ${{ secrets.TEST_PROJECT }}
+          team: google-dep-metrics
+          service: action-app-oidc
+          environment: test
+          status: started
+          result: pending
+          version: ${{ github.ref }}
+          service-account: ${{ secrets.OIDC_SA_EMAIL }}
+          workload-identity-provider: ${{ secrets.WIP }}
+
+      - name: Fake deploy
+        id: deploy
+        run: echo "Deployed"
+
+      - name: Finish
+        uses: ./
+        with:
+          gcp-auth-type: oidc
+          google-cloud-project: ${{ secrets.TEST_PROJECT }}
+          team: google-dep-metrics
+          service: action-app-oidc
+          environment: test
+          status: finished
+          result: ${{ steps.deploy.outcome }}
+          version: ${{ github.ref }}
+          service-account: ${{ secrets.OIDC_SA_EMAIL }}
+          workload-identity-provider: ${{ secrets.WIP }}
