--- a/action.yml
+++ b/action.yml
@@ -55,11 +55,9 @@ runs:
       with:
         token_format: id_token
         workload_identity_provider: ${{ inputs.workload-identity-provider }}
-        id_token_audience: ${{ inputs.workload-identity-provider }}
-        id_token_include_email: true
         service_account: ${{ inputs.service-account }}
         create_credentials_file: true
-        export_environment_variables: true
+        export_environment_variables: false
 
     - name: Authenticate to GCP (SA Key)
       id: sa-key
@@ -68,7 +66,7 @@ runs:
       with:
         credentials_json: ${{ inputs.service-account-keyfile }}
         create_credentials_file: true
-        export_environment_variables: true
+        export_environment_variables: false
 
     - name: Send metric
       shell: bash
@@ -82,16 +80,16 @@ runs:
         VERSION: ${{ inputs.version }}
         METRIC_VALUE: ${{ inputs.metric-value }}
       run: |
-        # if [[ "${{ inputs.gcp-auth-type }}" == "oidc" ]]; then
-        #   echo "Detected OIDC Authentication"
-        #   export GOOGLE_APPLICATION_CREDENTIALS=${{ steps.oidc.outputs.credentials_file_path }}
-        # elif [[ "${{ inputs.gcp-auth-type }}" == "sa-key" ]]; then
-        #   echo "Detected Service Account Key Authentication"
-        #   export GOOGLE_APPLICATION_CREDENTIALS=${{ steps.sa-key.outputs.credentials_file_path }}
-        # else
-        #   echo "Could not determine the path to the credentials file, exiting." && exit 1
-        # fi
+        if [[ "${{ inputs.gcp-auth-type }}" == "oidc" ]]; then
+          echo "Detected OIDC Authentication"
+          export GOOGLE_APPLICATION_CREDENTIALS=${{ steps.oidc.outputs.credentials_file_path }}
+        elif [[ "${{ inputs.gcp-auth-type }}" == "sa-key" ]]; then
+          echo "Detected Service Account Key Authentication"
+          export GOOGLE_APPLICATION_CREDENTIALS=${{ steps.sa-key.outputs.credentials_file_path }}
+        else
+          echo "Could not determine the path to the credentials file, exiting." && exit 1
+        fi
 
         # Send metric
         python -m pip install google-cloud-monitoring
-        python3 ${{ github.action_path }}/push_deploy_metric.py --team "$TEAM" --service "$SERVICE" --environment "$ENVIRONMENT" --status "$STATUS" --result "$RESULT" --version "$VERSION" --metric-value "$METRIC_VALUE"
+        python3 ${{ github.action_path }}/push_deploy_metric.py --auth-type "${{ inputs.gcp-auth-type }}" --team "$TEAM" --service "$SERVICE" --environment "$ENVIRONMENT" --status "$STATUS" --result "$RESULT" --version "$VERSION" --metric-value "$METRIC_VALUE"
