--- a/action.yml
+++ b/action.yml
@@ -54,11 +54,10 @@ runs:
       uses: google-github-actions/auth@v0
       with:
         token_format: id_token
-        id_token_audience: ${{ inputs.workload-identity-provider }}
         workload_identity_provider: ${{ inputs.workload-identity-provider }}
         service_account: ${{ inputs.service-account }}
         create_credentials_file: true
-        export_environment_variables: false
+        export_environment_variables: true
 
     - name: debug
       uses: actions/upload-artifact@v3
@@ -73,7 +72,7 @@ runs:
       with:
         credentials_json: ${{ inputs.service-account-keyfile }}
         create_credentials_file: true
-        export_environment_variables: false
+        export_environment_variables: true
 
     - name: Send metric
       shell: bash
