--- a/action.yml
+++ b/action.yml
@@ -53,7 +53,7 @@ runs:
       if: ${{ inputs.gcp-auth-type == 'oidc' }}
       uses: google-github-actions/auth@v0
       with:
-        token_format: id_token
+        token_format: access_token
         workload_identity_provider: ${{ inputs.workload-identity-provider }}
         service_account: ${{ inputs.service-account }}
         create_credentials_file: true
