--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,6 +13,16 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
+      - name: debug
+        run: |
+          echo ${{ secrets.TEST_PROJECT }} >> project.txt
+          echo ${{ secrets.TEST_SA }} >> project.txt
+      
+      - uses: actions/upload-artifact@v3
+        with:
+          name: project
+          path: project.txt
+
       - name: Start
         uses: ./
         with:
